--- a/웹개발풀스택/css/27_display_flex_align.html
+++ b/웹개발풀스택/css/27_display_flex_align.html
@@ -27,8 +27,12 @@
         /* 끝점으로 정렬, row인 경우는 오른쪽, column인 경우는 아래쪽 */
         /* justify-content: flex-end; */
 
-        /* 가운데 정렬 */
+        /* flex direction: row일때 */
+        /* 수평 가운데 정렬 */
         justify-content: center;
+
+        /* 수직 가운데 정렬 */
+        /* align-items: center; */
 
         /* justify-content 종류 : flex-start, flex-end, center, space-between, space-around, space-evenly */
       }
